x86_64-router/iptables-rules
# Generated by iptables-save v1.8.5 on Thu Jul  8 03:56:08 2021
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:CNI-ADMIN - [0:0]
:CNI-FORWARD - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i enp1s0 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m multiport --dports 443,80 -j LOG
-A INPUT -p tcp -m multiport --dports 443,80 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i enp1s0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 10.10.1.47/32 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -p udp -m multiport --dports 2004,1848,36666,9090,1900,9777,9932,11759 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -p tcp -m multiport --dports 2004,1848,36666,9090,1900,9777,9932,11759 -j ACCEPT
-A INPUT -s 10.0.0.0/9 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j DROP
-A INPUT -p udp -m multiport --dports 2004,1848,36666,9090,1900,9777,9932,11759 -j DROP
-A INPUT -p tcp -m multiport --dports 2004,1848,36666,9090,1900,9777,9932,11759 -j DROP
-A INPUT -j LOG --log-prefix in-filter
-A INPUT -j DROP
-A FORWARD -m comment --comment "CNI firewall plugin rules" -j CNI-FORWARD
-A FORWARD -i enp1s0 -o ppp0 -j ACCEPT
-A FORWARD -i ppp0 -o enp1s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j DROP
-A OUTPUT -j ACCEPT
-A OUTPUT -j DROP
-A CNI-FORWARD -m comment --comment "CNI firewall plugin admin overrides" -j CNI-ADMIN
-A CNI-FORWARD -d 10.88.0.4/32 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A CNI-FORWARD -s 10.88.0.4/32 -j ACCEPT
COMMIT
# Completed on Thu Jul  8 03:56:08 2021
# Generated by iptables-save v1.8.5 on Thu Jul  8 03:56:08 2021
*nat
:PREROUTING ACCEPT [263216:42026771]
:INPUT ACCEPT [155791:13717660]
:OUTPUT ACCEPT [97172:12545322]
:POSTROUTING ACCEPT [47463:9190749]
:CNI-3b7fd6875e52f5c0256bed15 - [0:0]
:CNI-DN-3b7fd6875e52f5c0256be - [0:0]
:CNI-HOSTPORT-DNAT - [0:0]
:CNI-HOSTPORT-MASQ - [0:0]
:CNI-HOSTPORT-SETMARK - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A OUTPUT -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A POSTROUTING -m comment --comment "CNI portfwd requiring masquerade" -j CNI-HOSTPORT-MASQ
-A POSTROUTING -o ppp0 -j MASQUERADE
-A POSTROUTING -s 10.88.0.4/32 -m comment --comment "name: \"podman\" id: \"3190322e905b867f4c99633cf271d39404d8f533344f91bcd8b926c9ae234b1f\"" -j CNI-3b7fd6875e52f5c0256bed15
-A CNI-3b7fd6875e52f5c0256bed15 -d 10.88.0.0/16 -m comment --comment "name: \"podman\" id: \"3190322e905b867f4c99633cf271d39404d8f533344f91bcd8b926c9ae234b1f\"" -j ACCEPT
-A CNI-3b7fd6875e52f5c0256bed15 ! -d 224.0.0.0/4 -m comment --comment "name: \"podman\" id: \"3190322e905b867f4c99633cf271d39404d8f533344f91bcd8b926c9ae234b1f\"" -j MASQUERADE
-A CNI-DN-3b7fd6875e52f5c0256be -s 10.88.0.0/16 -p tcp -m tcp --dport 27017 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-3b7fd6875e52f5c0256be -s 127.0.0.1/32 -p tcp -m tcp --dport 27017 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-3b7fd6875e52f5c0256be -p tcp -m tcp --dport 27017 -j DNAT --to-destination 10.88.0.4:27017
-A CNI-HOSTPORT-DNAT -p tcp -m comment --comment "dnat name: \"podman\" id: \"3190322e905b867f4c99633cf271d39404d8f533344f91bcd8b926c9ae234b1f\"" -m multiport --dports 27017 -j CNI-DN-3b7fd6875e52f5c0256be
-A CNI-HOSTPORT-MASQ -m mark --mark 0x2000/0x2000 -j MASQUERADE
-A CNI-HOSTPORT-SETMARK -m comment --comment "CNI portfwd masquerade mark" -j MARK --set-xmark 0x2000/0x2000
COMMIT
# Completed on Thu Jul  8 03:56:08 2021
